<resources>
    <string name="app_name">Teko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Screen -->
    <string name="tech">tech</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="join_as_technician">Join as Technician</string>
    <string name="login">Login</string>

</resources>